# FIA-tools

./: FIA_tools.ipynb  README.md  environment.yaml  environment.yml  environment_fia.yml  fia_tools_environment_Linux_MacOs.yml  input_paths.json  linux_environment.yaml  mac_environment.yaml  pyproject.toml  windows_environment.yml  windows_environment_no_builds.yml  windows_environment_with_builds.yml
code/: 1_select_channels.py  2_analyze_nuclei.py  2_nuclei_mask_generation.py  3_filter_imgs.py  3_foci_mask_generation.py  4_calculate_nuc_foci.py  4_foci_quantification.py  5_graph_representation.py  Step1.py  Step3.py  Step4.py  validate_folders.py
