[project]
name = "fia-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "csbdeep>=0.8.1",
    "imagej>=0.3.2",
    "numpy==1.26.4",
    "scikit-image>=0.25.2",
    "setuptools>=80.9.0",
    "stardist>=0.9.1",
    "tensorflow==2.14.1",
]
